# Prototyp_HWR_Feedback

./: .gitignore  Dockerfile  Feedback_mapper.py  Help_Data_Converter.py  Help_functions_feedback.py  Main.py  README.md  main.py  pyproject.toml  utils.py
model/: Modell_S.py  dataset.py  model.py
model/result/: log_filtered_index_list_lmdb_dataset.txt
